# capstone-hospital-quality

./: .gitignore  README.md  pyproject.toml
data/raw/: Hospital_General_Info
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb
