# ============================================================
# pyproject.toml
# Hospital Quality Prediction Capstone
# ============================================================

[project]
name = "capstone-hospital-quality"
version = "0.1.0"
description = "Machine learning analysis of CMS hospital quality ratings."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

docs = [
    "mkdocstrings[python]",
    "zensical",
]

# ============================================================
# PYRIGHT
# ============================================================

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
exclude = [
    "**/node_modules",
    "**/.*",
    ".venv",
    "**/__pycache__",
    "dist",
    "build",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportMissingImports = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"

# ============================================================
# PYTEST
# ============================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

# ============================================================
# RUFF
# ============================================================

[tool.ruff]
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88
preview = false
target-version = "py313"
unsafe-fixes = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "PTH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
"src/**/_version.py" = ["ALL"]
"tests/**/*.py" = ["B018", "B011"]
"src/**/py.typed" = ["ALL"]
"notebooks/**/*.ipynb" = ["F821"]

# ============================================================
# BUILD SYSTEM
# ============================================================

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/hospital_quality"]
